--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "style.reset": "^1.0.2",
     "styled-components": "^6.1.1",
     "styled-reset": "^4.5.1",
+    "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
